--- a/ansible/roles/devops_tools/tasks/main.yml
+++ b/ansible/roles/devops_tools/tasks/main.yml
@@ -25,6 +25,12 @@
     remote_src: yes
   when: not go_bin.stat.exists
 
+- name: Add Go to system-wide PATH
+  ansible.builtin.copy:
+    dest: /etc/profile.d/go_path.sh
+    content: "export PATH=$PATH:/usr/local/go/bin"
+    mode: "0644"
+
 - name: Check if Terraform is installed
   ansible.builtin.stat:
     path: /usr/local/bin/terraform
@@ -42,6 +48,103 @@
     dest: /usr/local/bin
     remote_src: yes
   when: not tf_bin.stat.exists
+
+- name: Check if Packer is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/packer
+  register: packer_bin
+
+- name: Download Packer binary
+  ansible.builtin.get_url:
+    url: "https://releases.hashicorp.com/packer/{{ packer_version }}/packer_{{ packer_version }}_linux_amd64.zip"
+    dest: /tmp/packer.zip
+  when: not packer_bin.stat.exists
+
+- name: Extract Packer binary
+  ansible.builtin.unarchive:
+    src: /tmp/packer.zip
+    dest: /usr/local/bin
+    remote_src: yes
+  when: not packer_bin.stat.exists
+
+- name: Check if Vagrant is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/vagrant
+  register: vagrant_bin
+
+- name: Download Vagrant binary
+  ansible.builtin.get_url:
+    url: "https://releases.hashicorp.com/vagrant/{{ vagrant_version }}/vagrant_{{ vagrant_version }}_linux_amd64.zip"
+    dest: /tmp/vagrant.zip
+  when: not vagrant_bin.stat.exists
+
+- name: Extract Vagrant binary
+  ansible.builtin.unarchive:
+    src: /tmp/vagrant.zip
+    dest: /usr/local/bin
+    remote_src: yes
+  when: not vagrant_bin.stat.exists
+
+- name: Check if LocalStack is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/localstack
+  register: localstack_bin
+
+- name: Download LocalStack binary
+  ansible.builtin.get_url:
+    url: "https://github.com/localstack/localstack-cli/releases/download/v{{ localstack_version }}/localstack-cli-{{ localstack_version }}-linux-amd64-onefile.tar.gz"
+    dest: /tmp/localstack.tar.gz
+  when: not localstack_bin.stat.exists
+
+- name: Extract LocalStack binary
+  ansible.builtin.unarchive:
+    src: /tmp/localstack.tar.gz
+    dest: /usr/local/bin
+    remote_src: yes
+  when: not localstack_bin.stat.exists
+
+- name: Check if Minikube is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/minikube
+  register: minikube_bin
+
+- name: Download Minikube binary
+  ansible.builtin.get_url:
+    url: "https://github.com/kubernetes/minikube/releases/download/v{{ minikube_version }}/minikube-linux-amd64"
+    dest: /usr/local/bin/minikube
+    mode: '0755'
+  when: not minikube_bin.stat.exists
+
+- name: Check if Kubectl is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/kubectl
+  register: kubectl_bin
+
+- name: Download Kubectl binary
+  ansible.builtin.get_url:
+    url: "https://dl.k8s.io/release/v{{ kubectl_version }}/bin/linux/amd64/kubectl"
+    dest: /usr/local/bin/kubectl
+    mode: '0755'
+  when: not kubectl_bin.stat.exists
+
+- name: Check if Helm is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/helm
+  register: helm_bin
+
+- name: Download Helm binary
+  ansible.builtin.get_url:
+    url: "https://get.helm.sh/helm-v{{ helm_version }}-linux-amd64.tar.gz"
+    dest: /tmp/helm.tar.gz
+  when: not helm_bin.stat.exists
+
+- name: Extract Helm binary
+  ansible.builtin.unarchive:
+    src: /tmp/helm.tar.gz
+    dest: /usr/local/bin
+    include: linux-amd64/helm
+    remote_src: yes
+  when: not helm_bin.stat.exists
 
 - name: Check if AWS CLI is installed
   ansible.builtin.stat:
@@ -63,6 +166,8 @@
 
 - name: Execute AWS CLI installer
   ansible.builtin.command: /tmp/aws/install -i /usr/local/aws-cli -b /usr/local/bin
+  args:
+    creates: /usr/local/bin/aws
   when: not aws_bin.stat.exists
 
 - name: Install Ansible using pip
@@ -71,18 +176,46 @@
     virtualenv: /opt/venv
     virtualenv_command: python3 -m venv
 
-- name: Add Go to system-wide PATH
+- name: Check if K9s is installed
+  ansible.builtin.stat:
+    path: /usr/local/bin/k9s
+  register: k9s_bin
+
+- name: Checkout K9s repository
+  ansible.builtin.git:
+    repo: https://github.com/derailed/k9s.git
+    dest: /tmp/k9s
+    version: v{{ k9s_version }}
+  when: not k9s_bin.stat.exists
+
+- name: Build K9s binary
+  community.general.make:
+    chdir: /tmp/k9s
+    target: build
+  environment:
+    PATH: "/usr/local/go/bin:{{ ansible_env.PATH }}"
+  when: not k9s_bin.stat.exists
+
+- name: Move K9s binary
   ansible.builtin.copy:
-    dest: /etc/profile.d/go_path.sh
-    content: "export PATH=$PATH:/usr/local/go/bin"
-    mode: "0644"
+    src: /tmp/k9s/execs/k9s
+    dest: /usr/local/bin/k9s
+    mode: "0755"
+    remote_src: yes
+  when: not k9s_bin.stat.exists
 
 - name: Clean up temporary files
   ansible.builtin.file:
     path: "{{ item }}"
     state: absent
-  with_items:
+  loop:
     - /tmp/terraform.zip
     - /tmp/awscliv2.zip
     - /tmp/aws
     - /tmp/go.tar.gz
+    - /tmp/localstack.tar.gz
+    - /tmp/get_helm.sh
+    - /tmp/packer.zip
+    - /tmp/vagrant.zip
+    - /tmp/k9s
+    - /tmp/helm.tar.gz
