--- a/ansible/roles/devops_tools/vars/main.yml
+++ b/ansible/roles/devops_tools/vars/main.yml
@@ -6,5 +6,6 @@ minikube_version: "1.38.0"
 kubectl_version: "1.35.0"
 packer_version: "1.14.3"
 vagrant_version: "2.4.6"
+ansible_version: "13.3.0"
 k9s_version: "0.50.18"
 helm_version: "4.1.0"
