Fixed wrong hostname

--- a/packer/http/preseed.cfg
+++ b/packer/http/preseed.cfg
@@ -6,7 +6,7 @@ d-i keyboard-configuration/xkb-keymap select us
 
 # Network configuration
 d-i netcfg/choose_interface select auto
-d-i netcfg/get_hostname string devops-vm
+d-i netcfg/get_hostname string devops-desktop
 d-i netcfg/get_domain string localdomain
 d-i netcfg/wireless_wep string
 
